# marqov

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CITATION.md  CMakeLists.txt  LICENSE.md  README.md  compilefulldocs.sh  createfulldocs.sh  job_slurm.cmd  jobitpa.cmd  loglogfile.txt
Examples/Regular2DHeisenberg/cfgs/: Heisenberg  mc
config/: AshkinTellerThreeColor.ini  EdwardsAnderson-Ising.ini  Heisenberg.ini  Ising.ini  Ising4d.ini  IsingRGG.ini  Potts3.ini  Potts4.ini  PottsSelect.ini  XXZAntiferroSingleAniso.ini  select.ini
demo/: AshkinTellerThreeColor.cpp  BlumeCapel.cpp  BlumeCapelBipartiteLattice.cpp  BlumeEmeryGriffiths.cpp  CMakeLists.txt  Heisenberg.cpp  HeisenbergSimpleThreaded.cpp  Ising.cpp  IsingRGG.cpp  IsingSimple.cpp  MARQOVdemo.cpp  MARQOVdemo.h  Phi4.cpp  Potts.cpp  XXZAntiferroSingleAniso.cpp  mysimpleheisenbergthreaded.cpp  mysimpleising.cpp
doc/: Doxyfile-marqov-breathe.cfg  Doxyfile-marqov.cfg  Hamiltonian.md  algorithms.md  changelog.rst  cluster-invasion.md  conf.py  currentstate.md  getting_started.rst  index.rst  installation.rst  io.md  io.rst  notes.md  observables.rst  problem.rst  rbim-literature.md  worm.md
doc/_static/: custom.css
doc/api/: api.rst  index.rst
doc/cxx/: config.rst  core.rst  cxx.rst  hamiltonians.rst  lattices.rst  marqov.puml  observables.rst  overview.rst  registry.rst  scheduler.rst  updates.rst  utilfunctions.rst  utilities.rst
doc/cxx/hamiltonians/: ashkin-teller.rst  blumecapel.rst  blumecapelbipartite.rst  blumeemerygriffiths.rst  edwardsandersonising.rst  heisenberg.rst  initializers.rst  ising.rst  phi4.rst  potts.rst  xxzantiferro.rst
doc/cxx/lattices/: constant_coordination.rst  erdos_renyj.rst  graph_from_csv.rst  regular_hypercubic.rst  regular_random_bond.rst  simple_bipartite.rst  super_chaos.rst
doc/cxx/observables/: concept.rst  defaultobservables.rst
doc/cxx/updates/: emcs.rst  metropolis.rst  wolff.rst
doc/examples/: HeisenbergSimpleThreaded.rst  IsingSimple.rst
doc/overview/: index.rst  io.rst
docs/: Doxyfile  Doxyfile-marqov-breathe.cfg  Doxyfile-marqov.cfg
docs/Sphinx/: Doxyfile  conf.py
docs/breathe/: conf.py  index.rst
docs/breathe/api/: cpp_doxygen_sphinx.rst  index.rst
docs/exhale/: Doxyfile  Makefile  conf.py  index.rst
notes/: Hamiltonian.md  algorithms.md
out8/: 0.h5  1.h5  2.h5  3.h5  5.h5
scripts/: createfulldocs.sh  job_sge.cmd  job_slurm.cmd  marqov-foss-2022a.eb
src/: .gitignore  .nfs00000000015d8d1a00000dc1  AshkinTeller.h  BlumeCapel.h  BlumeCapelBipartite.h  CMakeLists.txt  EdwardsAndersonIsing.h  Heisenberg.h  Ising.h  Phi4.h  Ssh.h  XXZAntiferro.h  XXZAntiferroSingleAniso.h  a.out  cachecontainer.h  cartprod.h  config.h  config.h.in  core.h  disordered_lattice.h  ducks1.cpp  embedder.h  emcs.h  filters.h  hamiltonianparts.h  hamparts.h  helpers.h  kleingordon.cpp  libshowcase.cpp  libshowcase.h  libshowcase.i  logfile.txt  main.cpp  marqov.cpp  marqov.h  marqovqueue.h  marqovqueue_utils.h  marqovscheduler.h  mc.ini  metropolis.h  (+21 more)
src/config/: .nfs00000000015dec8400000dca  AshkinTeller.ini  BlumeCapel.ini  BlumeCapelBipartite.ini  BlumeEmeryGriffiths.ini  EdwardsAnderson-Ising.ini  Heisenberg.ini  Ising.ini  Phi4.ini  Potts3.ini  Potts4.ini  XXZAntiferro.ini  io.ini  mc  mc.ini  select.ini
src/geom/: constantcoordination2D.h  grid.h  io.h  points.h  regular_lattice.h  ssh_lattice.h
src/geometry/: 7-3-7.csv  7-3-8.csv  7-3-9.csv  constantcoordination2D.h  disorderbase.h  distance.h  grid.h  io.h  neighbourclass.h  points.h  prng.h  regular_lattice.h  ssh_lattice.h  ssh_lattice2d.h
src/hamiltonian/: .BlumeEmeryGriffiths.h.swo  AshkinTeller.h  AshkinTellerThreeColor.h  BlumeCapel.h  BlumeCapelBipartite.h  BlumeEmeryGriffiths.h  EdwardsAndersonIsing.h  Heisenberg.h  Ising.h  MassiveScalarField.h  MassiveScalarField2.h  Phi4.h  Potts.h  Ssh.h  XXZAntiferro.h  XXZAntiferroSingleAniso.h  initializers.h  termcollection.h
src/hamiltonian/util/: hamparts.h  initializers.h  observables.h  randomdir.h  termcollection.h
src/lattice/: constant_coordination.h  erdos_renyj.h  graph_from_csv.h  random_geometric_graph.h  regular_hypercubic.h  regular_random_bond.h  simple_bipartite.h  super_chaos.h
src/lattice/util/: disorderbase.h  distance.h  io.h  neighbourclass.h  points.h  prob_density.h  regular_lattice.h  stuff.h
src/libmarqov/: CMakeLists.txt  cachecontainer.h  core.h  embedder.h  emcs.h  libmarqov.h  marqov_detail.h  marqovqueue.h  marqovqueue_helpers.h  marqovscheduler.h  metropolis.h  metropolishelpers.h  mlog.h  rngcache.h  timetracker.h  wolff.h
src/libmarqov/flog/: flog.h  flog_impl.h  flog_macros.h  flog_sinks.h
src/libmarqov/util/: cartprod.h  filters.h  query_threads.h  registry.h  regularlatticeloop.h  replicate.h  startup.h  systemtools.h
testsuite/: 1-cachecontainer.cpp  2-cachecontainer.cpp  4-eigentest.cpp  CMakeLists.txt
testsuite/components/: 1-cachecontainer.cpp  3-cachecontainer-long-obs.cpp  5-metro_exp.cpp  6-regular-lattice.cpp  CMakeLists.txt
